添加了跳转关系

--- a/res/layout/mainpage.xml
+++ b/res/layout/mainpage.xml
@@ -24,7 +24,9 @@
                <include
 			    layout="@layout/item_other"
 			    />
-                
+                <include
+			    layout="@layout/item_chart"
+			    />
              
             </LinearLayout>
         </ScrollView>
