--- a/res/layout/item_other.xml
+++ b/res/layout/item_other.xml
@@ -9,7 +9,6 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:layout_marginTop="10dp"
-   
         android:orientation="vertical" >
 
         <LinearLayout
@@ -18,7 +17,6 @@
             android:layout_weight="1" >
 
             <LinearLayout
-          
                 android:layout_width="0dp"
                 android:layout_height="fill_parent"
                 android:layout_marginRight="2dp"
@@ -31,10 +29,11 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="考试统计"
+                    android:text="全部题目"
                     android:textColor="@color/black" />
 
                 <TextView
+                    android:id="@+id/quanbu"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="0"
@@ -58,6 +57,7 @@
                     android:textColor="@color/black" />
 
                 <TextView
+                    android:id="@+id/tv_cuoti"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="0"
@@ -84,10 +84,11 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="我的错题"
+                    android:text="已做题"
                     android:textColor="@color/black" />
 
                 <TextView
+                    android:id="@+id/yizuoti"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="0"
@@ -108,10 +109,11 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="我的错题"
+                    android:text="我的收藏"
                     android:textColor="@color/black" />
 
                 <TextView
+                    android:id="@+id/tv_shouchang"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="0"
