--- a/res/values/color.xml
+++ b/res/values/color.xml
@@ -5,16 +5,18 @@
     <!-- 透明的 -->
     <color name="white">#ffffff</color>
     <color name="title_color">#ffffff</color>
-	<color name="main_back_color">#f3f7fa</color>
-		<color name="black">#000000</color>
-		<color name="red">#ff0000</color>
-		<color name="sxlx">#48bdfc</color>
-		<color name="sjlx">#fbc055</color>
-		<color name="zxlx">#fc5c52</color>
-		<color name="wzt">#378d69</color>
-		<color name="split">#f8f8f8</color>
-		<color name="bg_main">#f2f7fa</color>
-		 <color name="bg_control_panner">#f6f6f6</color>
-		
-	
+    <color name="main_back_color">#f3f7fa</color>
+    <color name="black">#000000</color>
+    <color name="red">#ff0000</color>
+    <color name="sxlx">#48bdfc</color>
+    <color name="sjlx">#fbc055</color>
+    <color name="zxlx">#fc5c52</color>
+    <color name="wzt">#378d69</color>
+    <color name="split">#f8f8f8</color>
+    <color name="bg_main">#f2f7fa</color>
+    <color name="bg_control_panner">#f6f6f6</color>
+    <color name="tab_title_normal_color">#262726</color>
+    <color name="tab_title_pressed_color">#16982b</color>
+    <color name="tab_middle_line_color">#5c882c</color>
+
 </resources>
