--- a/res/layout/activity_login.xml
+++ b/res/layout/activity_login.xml
@@ -12,9 +12,9 @@
 
     <LinearLayout
         android:layout_width="fill_parent"
-        android:orientation="vertical"
         android:layout_height="0dp"
-        android:layout_weight="10" >
+        android:layout_weight="10"
+        android:orientation="vertical" >
 
         <ImageView
             android:layout_width="132dp"
